--- a/example/index.html
+++ b/example/index.html
@@ -13,9 +13,9 @@
         <link rel="stylesheet" href="filename.css" />
     </head>
     <body>
-        <header class="page-title">
-            <h1 class="masthead">CMM UI~~~</h1>
-            <p class="lead"></p>
+        <header class="header">
+            <h1 class="masthead">Example~~~</h1>
+            <p class="prologue"></p>
         </header>
 
         <div class="section">
